# god-documents

cs2200/projects/cs2200-project4/: CMakeLists.txt  Makefile  os-sim
cs2200/projects/cs2200-project4/src/: process.h  student.c
mgt6785/project/: Makefile  README.md  extract_pdfs.py  extracted_text.txt  main.py  presentation_script.md  pyproject.toml  requirements.txt
mgt6785/project/config/: project.yaml
mgt6785/project/data/: .sample_seed  manifest.json
mgt6785/project/data/interim/: nlp_doc_scores.parquet  nlp_regime_scores.parquet
mgt6785/project/data/processed/: ablation_summary.csv  alpha_decomposition.parquet  backtest.parquet  backtest_etfs.parquet  bootstrap_sharpe.json  costs_sweep.csv  drawdown_attribution.csv  excess_market.parquet  ic_rolling.parquet  ic_summary.csv  llm_policy_log.csv  panel.parquet  panel_etfs.parquet  preds.parquet  preds_etfs.parquet  regime_coverage.csv  regime_information.csv  regime_summary.csv  regimes.parquet  report.html  sweep_summary.csv  tracking_error.parquet  turnover_rolling.parquet  wf_nested.csv
mgt6785/project/data/raw/: fred_monthly.parquet
mgt6785/project/docs/: CHANGELOG.md
mgt6785/project/logs/: simulator_20251111_2130.json  simulator_20251111_2155.json  simulator_20251111_2204.json  simulator_20251111_220502.json  simulator_20251111_220506.json  simulator_20251111_220508.json  simulator_20251111_220515.json  simulator_20251111_231118.json  simulator_20251117_2020.json  simulator_20251117_202004.json  simulator_20251117_202008.json  simulator_20251117_202014.json  simulator_20251117_202015.json  simulator_20251208_1710.json  simulator_20251208_1711.json  simulator_20251208_1755.json  simulator_20251208_175502.json  simulator_20251208_1756.json  simulator_20251208_175726.json  simulator_20251208_2207.json  simulator_20251208_220856.json  simulator_20251208_2222.json  simulator_20251208_222237.json  simulator_20251208_222245.json  simulator_20251208_2223.json  simulator_20251208_222308.json  simulator_20251208_222320.json  simulator_20251208_222323.json  simulator_20251208_222327.json  simulator_20251208_222330.json  simulator_20251208_222334.json  simulator_20251208_222338.json  simulator_20251208_222341.json  simulator_20251208_222346.json  simulator_20251208_222349.json  simulator_20251208_222352.json  simulator_20251208_2226.json  simulator_20251208_222607.json  simulator_20251208_222609.json  simulator_20251208_222613.json  (+2 more)
mgt6785/project/scripts/: make_tearsheet_pptx.py
mgt6785/project/src/macrotone.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
mgt6785/project/src/macrotones/: cli.py  datahub.py  pipeline_etfs.py  quickstart.py
mgt6785/project/tests/: __init__.py  conftest.py  test_alpha_significance.py  test_backtest_costs.py  test_fusion_pipeline.py  test_llm_allocator.py  test_macro_lambda_drift.py  test_macro_loader.py  test_nlp_sentiment.py  test_plotly_config.py  test_regime_utils.py  test_reproducibility.py  test_seed.py  test_simulator.py
mgt6785/project/ui/: app.py  components.py  components_regime.py  theming.py
(+2233 files in other folders)
